# boilerplate-rs

./: Cargo.toml  readme.md
.github/workflows/: test.yml
