[package]
name = "todo_name_lib"
version = "0.1.0"
edition = "2021"
authors = ["Jannis R <mail@jannisr.de>"]
repository = "https://github.com/derhuerst/todo-name.git"
homepage = "https://github.com/derhuerst/todo-name"
license = "ISC"
readme = "README.md"
description = "todo-description"
keywords = ["todo-keywords"]
exclude = [".github"]

[dependencies]
